# juejin-automatic-sign-draw

./: Cargo.toml  Makefile  README.md
alpine/: Dockerfile
config/: juejin.toml
src/: main.rs
