[package]
name = "juejin-automatic-sign-draw"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1" }

[profile.release]
panic = 'abort'

[profile.dev]
debug = 0
